[package]
name = "asana2"
edition = "2021"
version = "0.3.0"
description = "Fluent OpenAPI client for Asana"
homepage = "https://github.com/libninjacom/asana-rs"
readme = "README.md"
license = "MIT"
repository = "https://github.com/libninjacom/asana-rs"

[dependencies]
futures = "0.3.25"
httpclient = "0.19.0"
indexmap = "2.1.0"
serde_json = "1.0.81"
serde_path_to_error = "0.1.14"
serde_yaml = "0.9.27"

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.fake]
version = "2.9"
features = ["derive", "chrono", "rust_decimal", "http", "uuid"]

[dependencies.openapiv3-extended]
version = "3.1.4"
features = ["v2"]

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.18.2"
features = ["full"]

[lib]
name = "asana"
doctest = false
required-features = []
